--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -50,6 +50,7 @@ h4 {
 	font-size: 13.5px;
 	font-weight: 700;
 	letter-spacing: 1.5px;
+	line-height: 1.5;
 	margin-bottom: 10px;
 }
 
@@ -57,6 +58,7 @@ h5 {
 	font-size: 12.5px;
 	font-weight: 300;
 	letter-spacing: 1.5px;
+	line-height: 1.5;
 	margin-bottom: 10px;
 }
 
