--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,7 +5,7 @@ body, h1, h2, h3, h4, h5, h6,
 p, blockquote, pre, hr,
 dl, dd, ol, ul, figure, section {
   margin: 0;
-  padding: 0; 
+  padding: 0;
 }
 
 ol, ul {
@@ -126,6 +126,44 @@ header {
 .references {
 	p {
 		margin-bottom: 15px;
+	}
+}
+
+.hero {
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+	justify-content: center;
+	margin: auto;
+	max-width: 800px;
+	width: 100%;
+}
+
+.hello {
+	font-weight: 300;
+	text-transform: uppercase;
+}
+
+.nav {
+	display: flex;
+	flex-direction: row;
+	text-transform: uppercase;
+	li {
+		display: block;
+		margin: 5px;
+	}
+	a {
+		background: black;
+		border: 1px solid black;
+		color: white;
+		font-weight: 700;
+		letter-spacing: 2px;
+		padding: 10px;
+		width: 100%;
+		&:hover {
+			background: white;
+			color: black;
+		}
 	}
 }
 
