--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body>
+    {% include menu.html %}
     {{ content }}
   </body>
 </html>
