--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -196,16 +196,29 @@ header {
 .projects-wrap {
 	max-width: 1100px;
 	margin: 30px auto;
+	h1 {
+		border-bottom: 1px solid black;
+		font-size: 40px;
+		font-weight: 900;
+		margin-bottom: 40px;
+		padding-bottom: 20px;
+	}
+	h3 {
+		font-size: 25px;
+		font-weight: 900;
+		letter-spacing: initial;
+		margin-bottom: 10px;
+	}
+	h5 {
+		font-size: 15px;
+	}
 }
 
 .project-card {
 	display: flex;
 	justify-content: space-between;
 	flex-direction: row;
-	margin-bottom: 20px;
-	h3 {
-		letter-spacing: initial;
-	}
+	margin-bottom: 40px;
 	a {
 		opacity: 1;
 		&:hover {
