--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -21,7 +21,7 @@ a {
 }
 
 p {
-	font-size: 16px;
+	font-size: 14.5px;
 	line-height: 2;		
 }
 
@@ -41,7 +41,9 @@ h2 {
 }
 
 h3 {
+	border-bottom: 1px solid black;
 	margin-bottom: 20px;
+	padding-bottom: 10px;
 	text-transform: uppercase;
 }
 
@@ -80,7 +82,6 @@ body {
 }
 
 header {
-	border-bottom: 1px solid black;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -159,6 +160,8 @@ header {
 		break-after: always;		
 	}
 	.pb-ext {
+		display: block;
+		width: 20px;
 		page-break-after: always;
 	}
 }
