--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,23 +4,22 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
-    <meta name="description" content="Jamie Levinson - Senior Product Manager"/>
-    <meta name="keywords" content="Jamie Levinson, Senior Product Manager, CV"/>
-    <meta name="title" content="Jamie Levinson - Senior Product Manager" />
+    <meta name="description" content="Jamie Levinson"/>
+    <meta name="keywords" content="Jamie Levinson"/>
+    <meta name="title" content="Jamie Levinson" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Jamie Levinson - Senior Product Manager" />
+    <meta property="og:title" content="Jamie Levinson" />
     <meta property="og:url" content="jamie-levinson.com" />
-    <meta property="og:description" content="Jamie Levinson, Senior Product Manager, CV" />
+    <meta property="og:description" content="Jamie Levinson" />
     <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="jamie-levinson.com">
-    <meta name="twitter:title" content="Jamie Levinson - Senior Product Manager">
-    <meta name="twitter:description" content="Jamie Levinson, Senior Product Manager, CV">
+    <meta name="twitter:title" content="Jamie Levinson">
+    <meta name="twitter:description" content="Jamie Levinson">
     <meta property="twitter:image" content=""/>
     <title>{{ page.title }}</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body>
