--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -8,38 +8,59 @@ dl, dd, ol, ul, figure, section {
   padding: 0; 
 }
 
-video { 	
-  position: fixed;
-  top: 50%; 
-  left: 50%;
-  z-index: -1;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  transform: translate(-50%, -50%);
+body {
+	background: orange;
+	box-sizing: border-box;
+	transition: background-color 0.5s ease;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+	width: 100%;
+	height: 100%;
 }
 
-#overlay {
-	background: url(../img/overlay.svg);
-	background-size: 4px 4px, 100%;
-	background-repeat: repeat, no-repeat;
-	z-index: 1;
+.page {
+	display: flex;
+	flex-direction: column;
+}
+
+.sidebar {
+		background: blue;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
 	height: 100vh;
-	width: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 15%;
+}
+
+#stage {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-}
-
-#vol-control {
-	z-index: 2;
+	height: 100vh;
+	width: calc(100% - 15%);
+	background-image: url('https://scontent-ort2-1.cdninstagram.com/v/t51.2885-15/e35/17663484_1847804008817430_3573232728063082496_n.jpg?_nc_ht=scontent-ort2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=bqpbgHhByj8AX8l5drN&oh=cf5801fb2219c42d9679c66d56fdcd90&oe=5E82009A');
+	background-size: cover;
+	background-repeat:no-repeat;
+	background-position: center center;
+	opacity: 0;
+	transition: opacity 0.5s ease;
+	font-size: 100px;
+	font-weight: 800;
+	position: absolute;
+	left: 15%;
+	h1 {
+		color: white;
+		font-size: 14vw;
+	}
 }
 
 input[type=range] {
+		transform: rotate(270deg); 
   -webkit-appearance: none;
-  max-width: 350px;
-  width: 100%;
+  width: 500px;
   margin: 20.3px 0;
 }
 input[type=range]:focus {
